--- a/index.html
+++ b/index.html
@@ -7,5 +7,26 @@
 </head>
 <body>
     
+    <div class="main">
+
+        <!-- top -->
+        <div class="nav">
+            <h1>To-Do App</h1>
+        </div>
+
+        <!-- input -->
+        <dib class="input">
+            <input type="text" placeholder="Enter Your New Task here !!">
+            <button>Add Task</button>
+        </dib>
+
+        <ol class="uncompletedTask">
+
+        </ol>
+
+
+
+    </div>
+    
 </body>
 </html>
