--- a/index.html
+++ b/index.html
@@ -20,8 +20,12 @@
             <button>Add Task</button>
         </dib>
 
-        <ol class="uncompletedTask">
+        <ol class="uncompletedTaskList">
+            <h2>Uncompleted Task List</h2>
+        </ol>
 
+        <ol class="completeTaskList">
+            <h2>complete Task List</h2>
         </ol>
 
 
