--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 
         <!-- input -->
         <dib class="input">
-            <input type="text" placeholder="Enter Your New Task here !!">
-            <button>Add Task</button>
+            <input type="text" placeholder="Enter Your New Task here !!" id="getin">
+            <button id="BTN">Add Task</button>
         </dib>
 
         <ol class="uncompletedTaskList">
