--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
     <title>To Do JS</title>
 </head>
 <body>
@@ -22,11 +23,11 @@
         </dib>
 
         <ol class="uncompletedTaskList">
-            <h2>Uncompleted Task List</h2>
+            <h2>Un-completed Task </h2>
         </ol>
 
         <ol class="completeTaskList">
-            <h2>complete Task List</h2>
+            <h2>complete Task </h2>
         </ol>
 
 
