--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <button id="BTN">Add Task</button>
         </dib>
 
-        <!-- Showing out-->
+        <!-- Showing output-->
         <ol class="uncompletedTaskList">
             <h2>Un-completed Task </h2>
         </ol>
