--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
         </dib>
 
         <!-- Showing output-->
+
+        <!-- un-completed list -->
         <ol class="uncompletedTaskList">
             <h2>Un-completed Task </h2>
         </ol>
