--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <h2>Un-completed Task </h2>
         </ol>
 
-        <!-- com  -->
+        <!-- Completed  -->
         <ol class="completeTaskList">
             <h2>complete Task </h2>
         </ol>
