--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
         <!-- top -->
         <div class="nav">
-            <h1>To-Do App</h1>
+            <h1>To-Do List </h1>
         </div>
 
         <!-- input -->
